--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2048 - Telegram Mini App</title>
     <link rel="stylesheet" href="static/style.css">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/favicon.png">
+
+    <!-- Meta-теги для Telegram Mini App -->
+    <meta name="theme-color" content="#faf8ef">
+    <meta property="og:title" content="2048 - Telegram Mini App">
+    <meta property="og:description" content="Играй в 2048 прямо в Telegram!">
+    <meta property="og:image" content="static/preview.png">
 </head>
 <body>
     <div class="game-container">
@@ -15,6 +24,7 @@
         </div>
     </div>
 
-    <script src="static/script.js"></script>
+    <!-- Подключаем JavaScript с атрибутом defer -->
+    <script src="static/script.js" defer></script>
 </body>
 </html>
